PROD-6811 fix comments form small screen layout issues

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_comments.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_comments.scss
@@ -213,7 +213,14 @@
 				}
 			}
 
-			@media screen and (max-width: 960px) and (min-width: 800px) {
+			@media screen and (max-width: 1260px) and (min-width: 1080px) {
+
+				.has-sidebar.activity-sidebar-left & {
+					flex-wrap: wrap;
+				}
+			}
+
+			@media screen and (max-width: 960px) and (min-width: 768px) {
 
 				.has-sidebar & {
 					flex-wrap: wrap;
@@ -388,6 +395,10 @@
 				.document-preview-wrap {
 					height: 115px;
 				}
+			}
+
+			.bb-activity-video-wrap:not(.bb-video-length-1) {
+				flex-wrap: wrap;
 			}
 		}
 	}
